# MCP_Navigator

./: .env.example  .gitignore  README.md  client.py  main.py  pyproject.toml
orchestrai/: agents.py  cli.py  mcp_tools.py  metrics.py  tool_runner.py  workflow.py
servers/: browser_mcp.json  notes_server.py  weather.py
