[project]
name = "mcp-navigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
    "mcp>=1.12.4",
    "mcp-use>=1.3.9",
    "python-dotenv>=1.1.1",
]
